fixed scroll bar clipping into navbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -72,9 +72,11 @@ li a {
 
 .side-bar {
     position: fixed;
-    top: 0;
+    top: 56px;
+    bottom: 0;
     left: 0;
-    height: 100%;
+    padding-top: 25px;
+    height: auto;
     overflow-y: auto;
     overflow-x: hidden;
     border-right: 1px solid lightgray;
